# evolving-machine

./: README.md  pyproject.toml
src/evolving_machine/: cli.py  config.py  machina.yaml
