[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "evolving-machine"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
]
description = "A Machine that evolves with every interaction that it goes through."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["evolving-machine"]

dependencies = [
    "electroid >= 0.0.16",
    "opehaina >= 0.0.1",
    "PyGithub >= 2.6.0",
    "PyYAML >= 6.0.1",
    "urllib3 >= 2.0.4",
    "requests >= 2.32.3",
    "click >= 8.3.0"
]

[project.scripts]
evolving-machine = "machine_name.cli:run"

[project.urls]
"Homepage" = "https://github.com/evolving-machine/evolving-machine"
"Bug Tracker" = "https://github.com/evolving-machine/evolving-machine/issues"